# automacao-em-python

./: .env.example  .flake8  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  TODO.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
automacao_escritorio/: enviar_emails.py  gerar_relatorios.py  preencher_formularios.py
automacao_tarefas/: download_upload.py  renomear_arquivos.py  web_scraping.py
examples/: exemplos-de-uso.md
ia_aplicada/: analise_sentimentos.py  chatbot_nlp.py  classificar_imagens.py
integracao_apis/: api_previsao.py  postagens_sociais.py  telegram_bot.py
monitoramento_alertas/: detectar_anomalias.py  monitor_sites.py
projetos_exemplo/: dashboard_dados.py  pipeline_ia.py
tests/: test_exemplos.py
utils/: helpers.py
