[tool.black]
line-length = 88
target-version = ['py38']
exclude = '''
/(\.git|\.venv|venv|build|dist)/
'''

[tool.pytest.ini_options]
pythonpath = ["."]

[project]
name = "automacao-em-python"
version = "0.1.0"
description = "Exemplos práticos de automação em Python: escritório, web, APIs, IA/ML, monitoramento e dashboards."
authors = [
	{ name="João Pedro Toaldo", email="toaldojoaopedro@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

